--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
       <title>BullHacks - MesaHub</title>
-      <link type="text/css" rel="stylesheet" href="./assets/css/main.css"/>
+      <link type="text/css" rel="stylesheet" href="assets/css/main.css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </head>
 
@@ -10,53 +10,13 @@
 
     <div id="main">
       <div class="main-content">
-        <img src="./assets/logo.png"/>
-        <h1>MesaHub will be live soon! Hold tight</h1>
-        <h3>If you wish, we will automatically refresh the page when we go live, just click the button below!</h3>
-        <button onClick="javascript:setCookie('refresh', true)" class="main-content__button">Refresh For Me!</button>
+        <img src="assets/logo.png"/>
+        <h1>Coming Soon!</h1>
+        <h3>We're the Hackathon Dashboard Tracking software. We've just started up so haven't got a site live at the moment
+        but check back soon!</h3>
       </div>
     </div>
 
-    <script>
-
-      function setCookie(cname, cvalue, exdays) {
-        var d = new Date();
-        d.setTime(d.getTime() + (exdays*24*60*60*1000));
-        var expires = "expires="+ d.toUTCString();
-        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-        $('.main-content__button').html("Auto-refresh Active");
-        checkCookie()
-      }
-
-      function getCookie(cname) {
-        var name = cname + "=";
-        var decodedCookie = decodeURIComponent(document.cookie);
-        var ca = decodedCookie.split(';');
-        for(var i = 0; i <ca.length; i++) {
-            var c = ca[i];
-            while (c.charAt(0) == ' ') {
-                c = c.substring(1);
-            }
-            if (c.indexOf(name) == 0) {
-                return c.substring(name.length, c.length);
-            }
-        }
-        return "";
-      }
-
-      function checkCookie(){
-        console.log('Checked')
-        if(getCookie("refresh") == "true"){
-          $('.main-content__button').html("Auto-refresh Active");
-          window.setTimeout(function () {
-            window.location.reload();
-          }, 6000);
-        }
-      }
-
-      checkCookie();
-
-    </script>
 
   </body>
 
