--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
   <head>
       <title>BullHacks - MesaHub</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <link type="text/css" rel="stylesheet" href="assets/css/main.css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </head>
