Fixed my shit html because trump held mays hand

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="main-content">
         <img src="assets/logo.png"/>
         <h1>Coming Soon!</h1>
-        <h3 class="reference">You're arriving from: <span class="website"></h3>
+        <h3 class="reference">You're arriving from: <span class="website"></span></h3>
         <h3>We're the Hackathon Dashboard Tracking software. We've just started up so haven't got a site live at the moment
         but check back soon!</h3>
       </div>
