mesahub site hackcity and brumhack links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-      <title>BullHacks - MesaHub</title>
+      <title>MesaHub - Hackathon Hub</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link type="text/css" rel="stylesheet" href="assets/css/main.css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -12,10 +12,11 @@
     <div id="main">
       <div class="main-content">
         <img src="assets/logo.png"/>
-        <h1>Coming Soon!</h1>
+        <h1>Hey!</h1>
         <h3 class="reference">You're arriving from: <span class="website"></span></h3>
-        <h3>We're the Hackathon Dashboard Tracking software. We've just started up so haven't got a site live at the moment
-        but check back soon!</h3>
+        <h3>We're an open source hackathon dashboard developed by two avid hackathon attendees and organisers!</h3>
+        <h3>Our source is available on <a href="https://github.com/hacsbcu/mesahub">GitHub</a>. We can also host it for you</h3>
+        <h3>We're even at these two amazing hackathons this weekend: <a href="https://hackcity.mesahub.io/">Hack City</a> & <a href="https://brumhack.mesahub.io/">BrumHack</a></h3>
       </div>
     </div>
 
